# BMAD-METHOD

./: .gitignore  eslint.config.mjs
expansion-packs/bmad-technical-writing/data/tools/ai_pattern_analyzer/: CHANGELOG.md  README.md  VALIDATION_REPORT_advanced.md  __init__.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
expansion-packs/bmad-technical-writing/data/tools/ai_pattern_analyzer/.ai-analysis-history/: README.history.json
expansion-packs/bmad-technical-writing/data/tools/ai_pattern_analyzer/ai_pattern_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
expansion-packs/bmad-technical-writing/data/tools/ai_pattern_analyzer/cli/: __init__.py  args.py  args.py.argparse-backup  formatters.py  main.py  main.py.argparse-backup
expansion-packs/bmad-technical-writing/data/tools/ai_pattern_analyzer/core/: __init__.py  analysis_config.py  analyzer.py  dimension_loader.py  dimension_registry.py  dynamic_reporter.py  exceptions.py  results.py  weight_mediator.py
expansion-packs/bmad-technical-writing/data/tools/ai_pattern_analyzer/dimensions/: __init__.py  advanced.py  advanced_lexical.py  base.py  base_strategy.py  burstiness.py  formatting.py  lexical.py  perplexity.py  predictability.py  readability.py  sentiment.py  structure.py  stylometric.py  syntactic.py  transition_marker.py  voice.py
expansion-packs/bmad-technical-writing/data/tools/ai_pattern_analyzer/docs/: 1.1.enhanced-dimension-base.md  1.2.dimension-registry.md  1.3.weight-validation-mediator.md  1.4.5.split-multi-concern-dimensions.md  1.4.refactor-existing-dimensions.md  (+6 more)
(+907 files in other folders)
