[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_pattern_analyzer"
version = "5.0.0"
authors = [{name = "BMad Technical Writing"}]
description = "Modular AI pattern analysis tool for detecting AI-generated text"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Linguistic",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "marko>=2.0.0",
    "nltk>=3.8",
    "spacy>=3.7.0",
    "textstat>=0.7.3",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "scipy>=1.11.0",
    "textacy>=0.13.0",
    "numpy>=1.24.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
]

[project.scripts]
analyze-ai-patterns = "ai_pattern_analyzer.cli.main:main"

[tool.setuptools]
package-dir = {"ai_pattern_analyzer" = "."}
packages = ["ai_pattern_analyzer", "ai_pattern_analyzer.cli", "ai_pattern_analyzer.core", "ai_pattern_analyzer.dimensions", "ai_pattern_analyzer.evidence", "ai_pattern_analyzer.history", "ai_pattern_analyzer.scoring", "ai_pattern_analyzer.utils"]
